Fixed search button looking weird on mobile iphone

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,9 +210,10 @@ body {
 .searchButton {
 	display: inline-block;
 	margin:2.5%;
-	width: 20%;
+	width: 25%;
 	text-align: center;
 	font-size: 3em;
+	white-space: nowrap;
 }
 
 /********reply menu ************/
